force-app/main/default/objects/ServiceTarget__c/ServiceTarget__c.object-meta.xml
<CustomObject>
    <label>Service Target</label>
    <nameField>
        <displayFormat>ST-{00000000}</displayFormat>
        <label>Service Target Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>