force-app/main/default/objects/ServiceTarget__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Service</label>
    <referenceTo>Service__c</referenceTo>
    <relationshipLabel>Service Targets</relationshipLabel>
    <relationshipName>ServiceTargets</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>