force-app/main/default/objects/ServiceTarget__c/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Target</label>
    <referenceTo>Target__c</referenceTo>
    <relationshipLabel>Service Targets</relationshipLabel>
    <relationshipName>ServiceTarget</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>